# gig

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MVP.md  README.md  dist-workspace.toml  lefthook.yml
.claude/skills/pr/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
specs/: cd.toml  docker.toml  git.toml  npm.toml  pnpm.toml
src/: complete.rs  installer.rs  main.rs  shell.rs  spec.rs  tui.rs
