[package]
name = "gig"
version = "0.1.9"
edition = "2021"
description = "Terminal autocomplete for any CLI tool"
license = "MIT"
repository = "https://github.com/nagauta/gig"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["use-dev-tty"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
